--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -13,8 +13,22 @@ jobs:
   build:
     runs-on: ubuntu-latest
     timeout-minutes: 5
-
     steps:
+      - name: Generate GitHub App Token
+        id: app-token
+        uses: tibdex/github-app-token@b62528385c34dbc9f38e5f4225ac829252d1ea92 # v1.8.0
+        with:
+          app_id: ${{ secrets.APP_ID }}
+          private_key: ${{ secrets.PRIVATE_KEY }}
+
+      - name: Clone private repository
+        env:
+          token: ${{ steps.app-token.outputs.token }}
+        run: |
+          # クローンするプライベートリポジトリ名に応じて <OWNER> と <REPO_NAME> を書き換える
+          gh repo clone https://github.com/chinnosuke/privateTest
+          ls -la
+          
       - name: Checkout
         uses: actions/checkout@v2
 
