--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -1,67 +1,21 @@
 name: "Create PR"
 
-on: [ workflow_dispatch ]
-
-env:
-  JSON_FILE_PATH: sample.json
-  PR_TITLE: プルリクエストタイトル
-  PR_LABEL: hoge,foo
-  PR_TEMPLATE: .github/PULL_REQUEST_TEMPLATE.md
-  DEST_BRANCH: main
+on:
+  workflow_dispatch
 
 jobs:
-  build:
+  job:
     runs-on: ubuntu-latest
-    timeout-minutes: 5
     steps:
-      - name: Generate GitHub App Token
-        id: app-token
-        uses: tibdex/github-app-token@b62528385c34dbc9f38e5f4225ac829252d1ea92 # v1.8.0
+      - name: Generate token
+        id: generate_token
+        uses: tibdex/github-app-token@v1
         with:
           app_id: ${{ secrets.APP_ID }}
           private_key: ${{ secrets.PRIVATE_KEY }}
 
-      - name: Clone private repository
+      - name: Output token
         env:
-          token: ${{ steps.app-token.outputs.token }}
+          TOKEN: ${{ steps.generate_token.outputs.token }}
         run: |
-          # クローンするプライベートリポジトリ名に応じて <OWNER> と <REPO_NAME> を書き換える
-          gh repo clone https://github.com/chinnosuke/privateTest
-          ls -la
-          
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Set current datetime as env variable
-        env:
-          TZ: 'Asia/Tokyo'
-        run: echo "CURRENT_DATETIME=$(date +'%Y%m%d%H%M%S')" >> $GITHUB_ENV
-
-      - name: Create new branch
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          git switch -c fix/hoge_${{ env.CURRENT_DATETIME }}
-          git push -u origin fix/hoge_${{ env.CURRENT_DATETIME }}
-
-      # 任意の更新処理
-      - name: Update json file
-        run: |
-          cat ${{ env.JSON_FILE_PATH }} | jq '.+ {"user":{"name": "hoge","age": 30}}' > tmp && mv tmp ${{ env.JSON_FILE_PATH }}
-
-      - name: Add and Commit
-        uses: EndBug/add-and-commit@v7
-        with:
-          branch: fix/hoge_${{ env.CURRENT_DATETIME }}
-          message: ${{ env.PR_TITLE }}
-          add: ${{ env.JSON_FILE_PATH }}
-
-      - name: Create pull request
-        uses: repo-sync/pull-request@v2
-        with:
-          source_branch: fix/hoge_${{ env.CURRENT_DATETIME }}
-          destination_branch: ${{ env.DEST_BRANCH }}
-          pr_title: ${{ env.PR_TITLE }}
-          pr_template: ${{ env.PR_TEMPLATE }}
-          pr_label: ${{ env.PR_LABEL }}
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          echo "Access Token: ${TOKEN:4}"
