--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -4,15 +4,21 @@ on:
   workflow_dispatch
 
 jobs:
-  hello-world:
+  auto-format:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/create-github-app-token@v2
         id: app-token
         with:
-          app-id: ${{ vars.APP_ID }}
+          # required
+          app-id: ${{ secrets.APP_ID }}
           private-key: ${{ secrets.PRIVATE_KEY }}
-          owner: ${{ github.repository_owner }}
-      - uses: ./actions/staging-tests
+      - uses: actions/checkout@v4
         with:
           token: ${{ steps.app-token.outputs.token }}
+          ref: ${{ github.head_ref }}
+          # Make sure the value of GITHUB_TOKEN will not be persisted in repo's config
+          persist-credentials: false
+      - uses: creyD/prettier_action@v4.3
+        with:
+          github_token: ${{ steps.app-token.outputs.token }}
