create csv test

--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -31,4 +31,7 @@ jobs:
         with:
           dotnet-version: | 
             8.0.x
-      - run: dotnet run --project ./Main
+      - run: |
+           dotnet run --project ./Main
+           ls -R
+           
