--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -17,7 +17,15 @@ jobs:
           app-id: ${{ secrets.APP_ID }}
           private-key: ${{ secrets.PRIVATE_KEY }}
           owner: ${{ env.OWNER }} # 操作したいリポジトリのオーナーを指定する
-
+      
+      - name: Download GitHub Pages Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: github-pages # アップロードされたアーティファクトの名前
+          path: './downloaded-pages-content' # ダウンロード先のディレクトリ
+      - name: Download Dir
+        run: |
+          ls -R
       - name: Clone private repository
         env:
           GITHUB_TOKEN: ${{ steps.app_token.outputs.token }}
