--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -1,8 +1,9 @@
 name: "Create PR"
 
 on:
-  workflow_dispatch
-
+  schedule:
+    - cron: '*/5 * * * *' # 5分ごとに実行
+  workflow_dispatch:
 jobs:
   build:
     runs-on: ubuntu-latest
