--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -8,6 +8,8 @@ jobs:
     timeout-minutes: 5
     env:
       OWNER: ${{ github.repository_owner }}
+      cache_key: cache_2025_01_01  # ※ 本来このような適当なkeyは使用しない
+      cache_dir: ./Main
     steps:
       - name: Generate GitHub App Token
         id: app_token
@@ -16,14 +18,6 @@ jobs:
           app-id: ${{ secrets.APP_ID }}
           private-key: ${{ secrets.PRIVATE_KEY }}
           owner: ${{ env.OWNER }} # 操作したいリポジトリのオーナーを指定する
-      - run: mkdir ./downloaded-pages-content
-      - name: Download GitHub Pages Artifact
-        uses: actions/download-artifact@v4
-        with:
-          path: './downloaded-pages-content' # ダウンロード先のディレクトリ
-      - name: Download Dir
-        run: |
-          ls -R
       - name: Clone private repository
         env:
           GITHUB_TOKEN: ${{ steps.app_token.outputs.token }}
@@ -49,6 +43,12 @@ jobs:
       - uses: actions/upload-pages-artifact@v3
         with:
           path: data
+      - name: Cache restore/save
+        id: cache_restore
+        uses: actions/cache@v4
+        with:
+          path: ${{ env.cache_dir }}
+          key: ${{ env.cache_key }}
   deploy:
     needs: build
     runs-on: ubuntu-latest
