--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -26,8 +26,9 @@ jobs:
           key: ${{ env.cache_key }}
       - name: Create txt file
         run: |
-          if [ -e cache.txt ]; then
-           cat cache.txt
+          if [ -e .Main/cache.txt ]; then
+            mkdir Main
+            cat .Main/cache.txt
           fi
           date > cache.txt
       - name: Clone private repository
@@ -38,6 +39,7 @@ jobs:
           ls -R
           git clone https://x-access-token:"$GITHUB_TOKEN"@github.com/chinnosuke/privateTest.git
           ls -R
+
       - uses: actions/checkout@v4
       - name: Setup dotnet
         uses: actions/setup-dotnet@v4
