--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -61,9 +61,11 @@ jobs:
           dotnet-version: | 
             8.0.x
       - run: |
-           dotnet run --project ./privateTest
+           cd privateTest
+           dotnet run
+           cd ../
            mkdir data
-           mv test.csv ./data
+           mv ./privateTest/test.csv ./data
            echo "<h1>Hello GitHub Pages!</h1>" > data/index.html 
       - uses: actions/upload-artifact@v4
         with:
