--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -62,7 +62,7 @@ jobs:
             8.0.x
       - run: |
            ls -R
-           dotnet run --project ./Main
+           dotnet run --project ./privateTest
            mkdir data
            mv test.csv ./data
            echo "<h1>Hello GitHub Pages!</h1>" > data/index.html 
