カウントコミット

--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -63,6 +63,9 @@ jobs:
       - run: |
            ls -R
            cd ./privateTest
+           echo -en $(($(cat test.txt)+1)) > test.txt
+           git add test.txt
+           git push
            count=$(($(grep -o "[0-9]\+" <<< $(wc -l data.txt)) + 2))
            while true
            do
