--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -54,8 +54,8 @@ jobs:
           echo -en $(($(cat count.txt)+1)) > count.txt
           git add count.txt
           git commit -m "カウントテスト インクリメント"
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
           git push
       - name: Cache restore/save
         uses: actions/cache/save@v4
