クローン　プッシュ修正

--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -58,6 +58,8 @@ jobs:
         with:
           dotnet-version: | 
             8.0.x
+        env:
+          GITHUB_TOKEN: ${{ steps.app_token.outputs.token }}
       - run: |
            # クローンするプライベートリポジトリ名に応じて <REPO_NAME> を書き換える
            ls -R
