--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -56,12 +56,14 @@ jobs:
           git add count.txt
           git commit -m "カウントテスト インクリメント"
           git push
+          cd ../
+          git clone https://x-access-token:"$GITHUB_TOKEN"@github.com/chinnosuke/chinnosuke.github.io.git
       - name: Cache restore/save
         uses: actions/cache/save@v4
         with:
           path: ${{ env.cache_dir }}
           key: ${{ env.cache_key }}${{ env.TIMESTAMP }}
-      - uses: actions/checkout@v4
+      # - uses: actions/checkout@v4
       - name: Setup dotnet
         uses: actions/setup-dotnet@v4
         with:
